--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,13 @@ body {
     justify-content: center;
     align-items: center;
     background-color: black;
+    position: relative;
+}
+
+.main-game-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .main-title {
@@ -11,6 +18,7 @@ body {
     font-size: 60px;
     padding: 20px;
     font-family: 'Black Ops One', cursive;
+    z-index: 1;
 }
 
 #game-canvas {
