--- a/css/game-start.css
+++ b/css/game-start.css
@@ -3,7 +3,9 @@
     to {width: 100%;}
 }
 
-.game-start-container {
+.game-start-container,
+.game-win-container,
+.game-lose-container {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -20,6 +22,10 @@
     display: none;
 }
 
+.game-end-title {
+    font-size: 60px;
+}
+
 .game-start {
     padding-bottom: 40px;
 }
@@ -30,6 +36,7 @@
 }
 
 .text-end {
+    /* width: 50%; */
     font-size: 30px;
     padding: 20px 0;
     animation: typewriter 3.5s steps(40, end);
