--- a/css/game.css
+++ b/css/game.css
@@ -40,11 +40,74 @@
 
 .time-outer-container {
     position: absolute;
-    bottom: 150px;
-    right: calc(50% - 155px);
-    width: 400px;
-    height: 250px;
+    bottom: 130px;
+    right: calc(50% - 145px);
+    width: 380px;
+    height: 200px;
     border: 7px solid red;
     border-radius: 10px;
     box-shadow: 1px 1px 8px #5c5c5c;
+}
+
+.blink {
+    background-color: red;
+}
+
+.clock-outer-container,
+.word-outer-container {
+    width: 100%;
+    height: 75px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.clock-container,
+.word-container {
+    font-family: 'Black Ops One', cursive;
+    color: red;
+    letter-spacing: 5px;
+}
+
+.clock-container {
+    font-size: 70px;
+}
+
+.word-container {
+    font-size: 30px;
+}
+/* 
+.word-outer-container {
+} */
+
+.bomb-footer-outer-container {
+    width: 100%;
+    height: 50px;
+    display: flex;
+}
+
+.bomb-remaining-container,
+.bomb-attempted-container {
+    width: 50%;
+    text-align: center;
+    font-family: 'Black Ops One', cursive;
+    color: red;
+    line-height: 1.5;
+    font-size: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 5px;
+}
+
+.bomb-attempted-inner-container {
+    border: 2px solid red;
+    border-radius: 5px;
+    /* box-shadow: 1px 1px 3px #5c5c5c; */
+    width: 90%;
+    text-align: center;
+}
+
+.bomb-attempted-letters {
+    letter-spacing: 1px;
 }
