--- a/css/main.css
+++ b/css/main.css
@@ -16,9 +16,22 @@ body {
 .main-title {
     color: red;
     font-size: 60px;
-    padding: 20px;
+    padding: 15px 0 0px;
     font-family: 'Black Ops One', cursive;
     z-index: 1;
+}
+
+.level-title {
+    color: red;
+    font-size: 40px;
+    padding-bottom: 10px;
+    font-family: 'Black Ops One', cursive;
+    z-index: 1;
+    display: flex;
+}
+
+.level-number {
+    padding: 0 10px;
 }
 
 #game-canvas {
