--- a/css/fire.css
+++ b/css/fire.css
@@ -1,7 +1,7 @@
 .fire-container {
     position: absolute;
-    left: 10px;
-    top: 10px;
+    left: 50px;
+    top: 50px;
     height: 200px;
     width: 200px;
     
@@ -12,63 +12,119 @@
     position: absolute;
     top: 0;
     left: 0;
-    background-color: red;
+    background-color: #d70101;
     height: 50px;
     width: 50px;
-    z-index: 100;
+    z-index: 103;
     border-radius: 50%;
     border-top-right-radius: 0;
     transform: rotate(-45deg);
+    animation: jump 2s infinite;
+
+    /* box-shadow: 2px 2px 2px #d70101; */
 }
 
 .fire-right {
     position: absolute;
     top: 20px;
     left: 0;
-    background-color: orange;
-    height: 30px;
+    background-color: #f49307;
+    height: 35px;
     width: 30px;
-    z-index: 100;
+    z-index: 106;
     border-radius: 50%;
     border-top-right-radius: 0;
-    transform: rotate(-90deg);
+    transform: rotate(-70deg);
+    animation: tilt 2s infinite;
+
+    /* box-shadow: 2px 2px 2px #f49307; */
+
 }
 
 .fire-top {
     position: absolute;
     top: 0;
-    left: 0;
-    background-color: red;
+    left: -5px;
+    background-color: orange;
     height: 50px;
     width: 50px;
-    z-index: 100;
+    z-index: 102;
     border-radius: 50%;
     border-top-right-radius: 0;
-    transform: rotate(-45deg);
+    transform: rotate(-60deg);
+    animation: flicker 2s infinite;
+
+    /* box-shadow: 2px 2px 2px orange; */
+
 }
+/* #d70101 - dark red - fire left */
+/* #ff7a20 - dark orange - fire bottom */
 
 .fire-bottom {
     position: absolute;
-    top: 20px;
-    left: 20px;
-    background-color: yellow;
-    height: 10px;
-    width: 10px;
-    z-index: 100;
+    top: 8px;
+    left: 8px;
+    background-color: #ff7a20;
+    height: 45px;
+    width: 45px;
+    z-index: 105;
     border-radius: 50%;
     border-top-right-radius: 0;
-    transform: rotate(-45deg);
+    transform: rotate(-20deg);
+    animation: flicker 4s infinite;
+    /* box-shadow: 2px 2px 2px #ff7a20; */
+
 }
 
 .fire-middle {
     position: absolute;
-    top: 0;
-    left: 0;
-    background-color: orange;
-    height: 50px;
-    width: 50px;
-    z-index: 100;
+    top: 25px;
+    left: 15px;
+    background-color: red;
+    height: 30px;
+    width: 25px;
+    z-index: 107;
     border-radius: 50%;
-    border-top-right-radius: 0;
-    transform: rotate(-45deg);
+    border-top-left-radius: 0;
+    transform: rotate(60deg);
+    animation: grow 3s infinite;
+    /* box-shadow: 2px 2px 2px red; */
+
+}
+
+@keyframes grow {
+    0% {width: 25px; height: 30px; top: 25px;}
+    40% {width: 20px; height: 25px; top: 28px; opacity: .7}
+    50% {width: 25px; height: 30px; top: 25px;}
+    65% {width: 23px; height: 28px; top: 26px; opacity: .7}
+    80% {width: 25px; height: 30px; top: 25px;}
+    /* 0% {width: 100%; height: 100%}
+    20% {width: 60%; height: 60%}
+    30% {width: 100%; height: 100%}
+    35% {width: 80%; height: 80%}
+    50% {width: 100%; height: 100%} */
+}
+
+@keyframes flicker {
+    0% {opacity: 1;}
+    40% {opacity: .9}
+    50% {opacity: 1;}
+    65% {opacity: .9}
+    80% {opacity: .8;}
+}
+
+@keyframes jump {
+    0% {top: 0;}
+    40% {top: -2px}
+    50% {top: 0;}
+    65% {top: -1px}
+    80% {top: 1px;}
+}
+
+@keyframes tilt {
+    0% {transform: rotate(-70deg);}
+    20% {transform: rotate(-80deg);}
+    50% {transform: rotate(-70deg);}
+    60% {transform: rotate(-75deg);}
+    80% {transform: rotate(-70deg);;}
 }
