--- a/css/fire.css
+++ b/css/fire.css
@@ -80,7 +80,7 @@
     position: absolute;
     top: 25px;
     left: 15px;
-    background-color: red;
+    background-color: #e30000;
     height: 30px;
     width: 25px;
     z-index: 107;
