--- a/css/wick.css
+++ b/css/wick.css
@@ -20,7 +20,7 @@
     height: 100%;
     border-radius: 50%;
     z-index: -2;
-    background-image: repeating-linear-gradient(90deg, #9b2828, #9b2828 10px, #691b1b 2px, #691b1b 11px);
+    background-image: repeating-linear-gradient(90deg, #902727, #902727 10px, #691b1b 2px, #691b1b 11px);
         /* #9b2828 10px, */
         
         /* #691b1b 20px, */
