--- a/css/game-start.css
+++ b/css/game-start.css
@@ -16,7 +16,7 @@
     height: 100%;
     background-color: black;
     font-family: 'Black Ops One', cursive;
-    color: red;
+    color: #e30000;
     display:flex;
     flex-direction: column;
     justify-content: center;
@@ -88,7 +88,7 @@
 .game-start-btn {
     position: absolute;
     font-size: 30px;
-    border: 1px solid red;
+    border: 1px solid #e30000;
     padding: 5px 10px;
     animation: delay 4s;
     /* left: calc(50% - 70px); */
@@ -97,6 +97,6 @@
 }
 
 .game-start-btn:hover {
-    background-color: red;
+    background-color: #e30000;
     color: white;
 }
