--- a/css/game.css
+++ b/css/game.css
@@ -122,13 +122,13 @@
     right: calc(50% - 145px);
     width: 380px;
     height: 200px;
-    border: 7px solid red;
+    border: 7px solid #e30000;
     border-radius: 10px;
     box-shadow: 1px 1px 8px #5c5c5c;
 }
 
 .blink {
-    background-color: red;
+    background-color: #e30000;
 }
 
 .clock-outer-container,
@@ -143,7 +143,7 @@
 .clock-container,
 .word-container {
     font-family: 'Black Ops One', cursive;
-    color: red;
+    color: #e30000;
     letter-spacing: 5px;
     display: flex;
 }
@@ -174,7 +174,7 @@
     width: 50%;
     text-align: center;
     font-family: 'Black Ops One', cursive;
-    color: red;
+    color: #e30000;
     line-height: 1.5;
     font-size: 15px;
     display: flex;
@@ -184,7 +184,7 @@
 }
 
 .bomb-attempted-inner-container {
-    border: 2px solid red;
+    border: 2px solid #e30000;
     border-radius: 5px;
     /* box-shadow: 1px 1px 3px #5c5c5c; */
     width: 90%;
