--- a/css/fire.css
+++ b/css/fire.css
@@ -119,3 +119,127 @@
     60% {transform: rotate(-75deg);}
     80% {transform: rotate(-70deg);;}
 }
+
+@media (max-width: 850px) {
+    .fire-container {
+        position: absolute;
+        left: -66px;
+        top: -72px;
+        height: 120px;
+        width: 120px;
+        transform: rotate(-150deg);
+        /* background-color: blue; */
+    }
+
+    .fire-left {
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-color: #d83838;
+        height: 30px;
+        width: 30px;
+        z-index: 103;
+        border-radius: 50%;
+        border-top-right-radius: 0;
+        transform: rotate(-45deg);
+        animation: jump 2s infinite;
+        box-shadow: 2px -2px 5px #d65555;
+    }
+
+    .fire-right {
+        position: absolute;
+        top: 12px;
+        left: 0;
+        background-color: #f49307;
+        height: 21px;
+        width: 18px;
+        z-index: 106;
+        border-radius: 50%;
+        border-top-right-radius: 0;
+        transform: rotate(-70deg);
+        animation: tilt 2s infinite;
+        box-shadow: 2px -2px 4px #f39b1f;
+    }
+
+    .fire-top {
+        position: absolute;
+        top: 0;
+        left: -5px;
+        background-color: orange;
+        height: 30px;
+        width: 30px;
+        z-index: 102;
+        border-radius: 50%;
+        border-top-right-radius: 0;
+        transform: rotate(-60deg);
+        animation: flicker 2s infinite;
+        box-shadow: 2px -2px 2px #e4a228;
+
+    }
+    /* #d70101 - dark red - fire left */
+    /* #ff7a20 - dark orange - fire bottom */
+
+    .fire-bottom {
+        position: absolute;
+        top: 4.8px;
+        left: 4.8px;
+        background-color: #ff7a20;
+        height: 27px;
+        width: 27px;
+        z-index: 105;
+        border-radius: 50%;
+        border-top-right-radius: 0;
+        transform: rotate(-20deg);
+        animation: flicker 4s infinite;
+        box-shadow: 2px -2px 2px #f78031;
+
+    }
+
+    .fire-middle {
+        position: absolute;
+        top: 15px;
+        left: 9px;
+        background-color: #ec2e2e;
+        height: 18px;
+        width: 15px;
+        z-index: 107;
+        border-radius: 50%;
+        border-top-left-radius: 0;
+        transform: rotate(60deg);
+        animation: grow 3s infinite;
+        box-shadow: -2px -2px 4px #f83c3c;
+
+    }
+
+    @keyframes grow {
+        0% {width: 15px; height: 18px; top: 15px;}
+        40% {width: 14px; height: 15px; top: 16px; opacity: .6}
+        50% {width: 15px; height: 18px; top: 15px;}
+        65% {width: 14px; height: 17px; top: 16px; opacity: .7}
+        80% {width: 15px; height: 18px; top: 15px;}
+    }
+
+    @keyframes flicker {
+        0% {opacity: 1;}
+        40% {opacity: .9}
+        50% {opacity: 1;}
+        65% {opacity: .9}
+        80% {opacity: .8;}
+    }
+
+    @keyframes jump {
+        0% {top: 0;}
+        40% {top: -2px}
+        50% {top: 0;}
+        65% {top: -1px}
+        80% {top: 1px;}
+    }
+
+    @keyframes tilt {
+        0% {transform: rotate(-70deg);}
+        20% {transform: rotate(-80deg);}
+        50% {transform: rotate(-70deg);}
+        60% {transform: rotate(-75deg);}
+        80% {transform: rotate(-70deg);;}
+    }
+}
