--- a/css/game-start.css
+++ b/css/game-start.css
@@ -101,3 +101,52 @@
     background-color: #e30000;
     color: white;
 }
+
+@media (max-width: 850px) {
+    .game-start-container,
+    .game-win-container,
+    .game-lose-container {
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+    }
+    .game-start-inner-container {
+        position: relative;
+        height: 100%;
+        width: 100%;
+    }
+
+    .game-start-inner {
+        position: absolute;
+        width: 680px;
+        top: 144px;
+        left: 5%;
+    }
+
+    .hidden {
+        display: none;
+    }
+
+    .game-end-title {
+        font-size: 5vw;
+    }
+
+    #game-start > p {
+        padding: 0px 10px;
+    }
+
+    .game-start-text {
+        font-size: 3.5vw;
+        padding: 10px 0;
+    }
+
+    .text-end {
+        font-size: 3.5vw;
+        padding: 20px 20px;
+    }
+
+    .game-start-btn {
+        font-size: 5vw;
+        bottom: 60px;
+    }
+}
