--- a/css/wick.css
+++ b/css/wick.css
@@ -63,6 +63,77 @@
 }
 
 @keyframes turn {
-    from {transform: rotate(0deg)}
+    from {transform: rotate(30deg)}
     to {transform: rotate(180deg)}
+}
+
+@media (max-width: 850px) {
+    .wick-container {
+        height: 156px;
+        width: 156px;
+        /* background-color: white; */
+        position: absolute;
+        top: 3px;
+        right: 150px;
+        /* z-index: -1; */
+    }
+
+    .wick-inner-container {
+        position: relative;
+        height: 100%;
+        width: 100%;
+    }
+
+    .wick-outer-circle {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+        z-index: -2;
+        background-image: repeating-linear-gradient(110deg, #902727, #902727 10px, #691b1b 2px, #691b1b 11px);
+            /* #9b2828 10px, */
+            
+            /* #691b1b 20px, */
+        /* ); */
+        /* background-color: #9b2828; */
+        border: 2px solid black;
+        /* box-shadow: 2px 2px 8px -8px #530500; */
+
+    }
+
+    .wick-inner-circle {
+        position: absolute;
+        top: 12px;
+        left: 12px;
+        width: 85%;
+        height: 85%;
+        border-radius: 50%;
+        background-color: #666666;
+        z-index: -2;
+        border: 2px solid black;
+        box-shadow: 2px -2px 4px #530500;
+    }
+
+    .wick-cover {
+        position: absolute;
+        bottom: -6px;
+        left: -12px;
+        width: 180px;
+        height: 96px;
+        /* border-radius: 50%; */
+        background-color: #666666;
+        z-index: -2;
+        /* border: 2px solid black; */
+        transform: rotate(15deg);
+    }
+
+    .rotate-container {
+        /* animation: turn 25s linear; */
+        z-index: -2;
+    }
+
+    @keyframes turn {
+        from {transform: rotate(60deg)}
+        to {transform: rotate(180deg)}
+    }
 }
