--- a/css/main.css
+++ b/css/main.css
@@ -58,6 +58,11 @@ body {
     color: #a00000;
 }
 
+.mobile-input {
+    display: none;
+
+}
+
 @media (max-width: 850px) {
     .main-title {
         font-size: 9vw;
@@ -75,5 +80,15 @@ body {
     .linkedin-icon,
     .volume-icon {
         font-size: 20px;
+    }
+
+    .mobile-input {
+        display: block;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        z-index: 2;
+        color: transparent;
+        /* background-color: white; */
     }
 }
